--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,10 +47,10 @@
         if (userId) {
           document
             .getElementById("sell-btn")
-            .setAttribute("href", "/energy/sell?id" + userId);
+            .setAttribute("href", "/energy/sell?id=" + userId);
           document
             .getElementById("buy-btn")
-            .setAttribute("href", "/energy/buy?id" + userId);
+            .setAttribute("href", "/energy/buy?id=" + userId);
         }
       });
     </script>
