--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -40,11 +40,11 @@
       </tr>
       <% }); %>
     </table>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deserunt laudantium accusantium error excepturi saepe esse corporis? Fuga ex eligendi nisi saepe, cupiditate voluptate rerum adipisci maxime quis repudiandae quibusdam.</p>
+    <p>In the forthcoming auction, there will be prospective buyers who refrained from participating in the previous auction due to the winner determination rule. Moreover, there exists a cohort of buyers from prior auctions whose acquisition needs were unmet, alongside newly registered buyers who have joined the fold between the last auction and the upcoming one. This amalgamation of participants imbues the forthcoming auction with a sense of anticipation and complexity, rendering it a pivotal event for stakeholders, characterized by diverse opportunities and potential outcomes.</p>
   </div>
     <h2 style="color: aliceblue;">Sellers Data:</h2>
     <div class="sub-div" style="background-color: #948979;">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum deserunt laudantium accusantium error excepturi saepe esse corporis? Fuga ex eligendi nisi saepe, cupiditate voluptate rerum adipisci maxime quis repudiandae quibusdam.</p>
+      <p>In the upcoming auction, sellers will encounter a range of circumstances. Some may find themselves facing buyers who refrained from participating in the previous auction due to the winner determination rule. Additionally, there are sellers who have carried over inventory from prior auctions due to unmet buyer demands. Moreover, new sellers may have entered the market since the last auction, adding further dynamism to the selling landscape. This confluence of factors underscores the significance of strategic planning and adaptability for sellers in maximizing their opportunities and achieving optimal outcomes in the upcoming auction.</p>
     <table id="sell_table">
       <tr style="background-color: #153448; color: aliceblue;">
         <th>Name</th>
